Ony fade in media when loaded (also fix video sometimes not showing)

--- a/src/components/ProjectPreview.css
+++ b/src/components/ProjectPreview.css
@@ -12,11 +12,6 @@
     object-fit: cover;
 }
 
-.card-media img,
-.card-media .video-container {
-    animation: fadeIn 0.4s;
-}
-
 .card-media .mini-controls {
     position: absolute;
     left: 50%;
@@ -37,7 +32,6 @@
     height: 100%;
     padding: 1rem;
     z-index: 10;
-    animation: fadeIn 0.4s;
 }
 
 .card-media.expanded img,
